src/tui/views/snapshots/whk__tui__views__snapshot_tests__form_bulk_resend_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(&app, 80, 24).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ DLQ · stripe-prod · exhausted,failed ────────────────────────────────────────┐"
"│▸ billing-worker                                  4 exhausted     1 failed    │"
"│  audit-log                                       0 exhausted     2 failed    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Deliveries · billing-worker ─────────────────────────────────────────────────┐"
"│▸ 2┌ Resend billing-worker ───────────────────────────────────────────────┐   │"
"│  2│▸ Statuses          space toggles                                     │   │"
"│   │    ▸ [x] exhausted  4 in the DLQ                                     │   │"
"│   │      [ ] failed  1 in the DLQ                                        │   │"
"│   │  Since (optional)                                                    │   │"
"│   │  Until (optional)                                                    │   │"
"│   └──────────────────────────────────────────────────────────────────────┘   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" tab next field · ctrl+s save · esc cancel                               3s ago "
