src/tui/views/snapshots/whk__tui__views__snapshot_tests__form_replay_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(&app, 80, 24).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ evt_8f2a1b ──────────────────────────────────────────────────────────────────┐"
"│POST evt_8f2a1b · stripe-prod · 2026-09-23 12:04:11                           │"
"│✓ verified · application/json · 62 B · expires 2026-10-23 12:04:11            │"
"│                                                                              │"
"│┌ Headers ───────────────────────────────────────────────────────────────────┐│"
"││content-type: application/json                                              ││"
"││st┌ Replay evt_8f2a1b ───────────────────────────────────────────────────┐  ││"
"││us│▸ Connections       space toggles                                     │  ││"
"│└──│    ▸ [x] billing-worker                                              │──┘│"
"│┌ B│      [x] audit-log  disabled                                         │──┐│"
"││{ └──────────────────────────────────────────────────────────────────────┘  ││"
"││  "amount": 1200,                                                           ││"
"││  "note": null,                                                             ││"
"││  "paid": true,                                                             ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Deliveries ────────────────────────────────────────────────────────────────┐│"
"││  ✓ billing-worker  succeeded  1 attempt                                    ││"
"││  ✕ audit-log  exhausted  2 attempts                                        ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────┘"
" tab next field · ctrl+s save · esc cancel                               3s ago "
