src/tui/views/snapshots/whk__tui__views__snapshot_tests__help_stats_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                                                            "
"┌──────────────┐┌ Stats ⠋ ─────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  Sources     ││range  24h   7d   30d                                                                                 │"
"│  Destinations││                                                                                                      │"
"│  Connections ││                                                                                                      │"
"│  Events      ││                                                                                                      │"
"│  DLQ         ││                                                                                                      │"
"│▸ Stats       ││                                                                                                      │"
"│  Relay       ││                                                                                                      │"
"│  Settings    ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││               ┌ Keys ────────────────────────────────────────────────┐                               │"
"│              ││               │Global                                                │                               │"
"│              ││               │  j/k, arrows     move                                │                               │"
"│              ││               │  enter           open                                │                               │"
"│              ││               │  esc             back                                │                               │"
"│              ││               │  tab             next pane or tab                    │                               │"
"│              ││               │  r               refresh now                         │                               │"
"│              ││               │  g + letter      jump: s d c e q t r ,               │                               │"
"│              ││               │  ?               this help                           │                               │"
"│              ││               │  q, ctrl+c       quit                                │                               │"
"│              ││               │                                                      │                               │"
"│              ││               │This screen                                           │                               │"
"│              ││               │  h/l, 1-3        range: 24h, 7d, 30d                 │                               │"
"│              ││               └──────────────────────────────────────────────────────┘                               │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ? close help                                                                                                           "
