src/tui/views/snapshots/whk__tui__views__snapshot_tests__live_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                                                            "
"┌──────────────┐┌ stripe-prod ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│▸ Sources     ││1 Overview   2 Live   3 Events   4 Connections   5 DLQ                                                │"
"│  Destinations││                                                                                                      │"
"│  Connections ││● live   · follow on                                                                                  │"
"│  Events      ││                                                                                                      │"
"│  DLQ         ││▸ 2026-09-23 12:04:11  POST    evt_new                application/json       812 B     ✓  …           │"
"│  Stats       ││  2026-09-23 12:04:11  POST    evt_old                application/json       812 B     ✓  …           │"
"│  Relay       ││                                                                                                      │"
"│  Settings    ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" enter open · f follow · 1-5 tabs · esc back                                                                     3s ago "
