src/tui/views/snapshots/whk__tui__views__snapshot_tests__live_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ stripe-prod ─────────────────────────────────────────────────────────────────┐"
"│1 Overview   2 Live   3 Events   4 Connections   5 DLQ                        │"
"│                                                                              │"
"│● live   · follow on                                                          │"
"│                                                                              │"
"│▸ 2026-09-23 12:04:11  POST    evt_new    applicati  812 B     ✓  …           │"
"│  2026-09-23 12:04:11  POST    evt_old    applicati  812 B     ✓  …           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" enter open · f follow · 1-5 tabs · esc back                             3s ago "
