src/tui/views/snapshots/whk__tui__views__snapshot_tests__login_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   … · … · app.webhooker.eu                                                                                 "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                            ┌ Log in ──────────────────────────────────────────────────────┐                            "
"                            │Paste an API key (whk_…) to connect this terminal.            │                            "
"                            │                                                              │                            "
"                            │API key                                                       │                            "
"                            │Server    https://app.webhooker.eu                            │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            └──────────────────────────────────────────────────────────────┘                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" enter log in · tab next field · ctrl+c quit                                                                            "
