src/tui/views/snapshots/whk__tui__views__snapshot_tests__relay_empty_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ Relay ───────────────────────────────────────────────────────────────────────┐"
"│No relay running. Press n to start one, or L on a source.                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" n new relay · g jump · ? help · q quit                                         "
