src/tui/views/snapshots/whk__tui__views__snapshot_tests__relay_expanded_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(&app, 120, 40).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                              ⇄ relay stripe-prod → :3000 ● "
"┌──────────────┐┌ Relay · stripe-prod → http://localhost:3000 ────────────────────────────────────────── 2 fwd · 1 err ┐"
"│  Sources     ││● connected                                                                                           │"
"│  Destinations││┌ Request ────────────────────────────────────────┐┌ Response ───────────────────────────────────────┐│"
"│  Connections │││POST http://localhost:3000                       ││500 Internal Server Error  120ms                 ││"
"│  Events      │││content-type: application/json                   ││content-type: application/json                   ││"
"│  DLQ         │││stripe-signature: t=1,v1=abc                     ││                                                 ││"
"│  Stats       │││x-webhooker-event-id: evt_77c1d05e9a             ││{                                                ││"
"│▸ Relay       │││                                                 ││  "error": "db timeout"                          ││"
"│  Settings    │││{                                                ││}                                                ││"
"│              │││  "id": "in_1",                                  ││                                                 ││"
"│              │││  "type": "invoice.paid"                         ││                                                 ││"
"│              │││}                                                ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              ││└─────────────────────────────────────────────────┘└─────────────────────────────────────────────────┘│"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" p replay locally · u change URL · x stop · enter expand · / search                                                     "
